// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Banishing Light 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Banishing Light",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": "target cond:until_self_leaves cond:nonland",
      "from": "bf",
      "owner": "opp",
      "role": "move",
      "thing": "permanent",
      "to": "exile",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Brave-Kin Duo 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Brave-Kin Duo",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cost:{1} cond:sorcery_speed",
      "from": "bf",
      "owner": "me",
      "role": "tap",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "target lifetime:turn cond:pt_delta=+1/+1",
      "from": "--",
      "owner": "any",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Brightblade Stoat 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
    },
  },
  "name": "Brightblade Stoat",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "first strike",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "lifelink",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;
